--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>Ik ben dit jaar met een goede vriendin gaan interrailen door Midden-Europa,
             hierbij een korte overview van de steden waar ik geweest ben: </p>
         <ul>
-            <li>Berlijn</li>
+            <li>Berlijn</li> 
             <li>Krakau</li>
             <li>Praag</li>
             <li>Wenen</li>
@@ -33,11 +33,14 @@
             <li>Innsbruck</li>
         </ul>
         <p>We hadden het er al een paar jaar over dat we dit wilden gaan doen en dit jaar hebben we het
-            eindelijk echt doorgepakt. Tijdens de reis zijn we een aantal bekenden tegengekomen 
+            eindelijk echt doorgepakt en zijn we er voor gaan sparen. We hebben 8 plekken bezocht, in 7 landen. 
+            Tijdens de reis zijn we een aantal bekenden tegengekomen 
             en hebben we ook veel nieuwe mensen ontmoet.
             <p></p>
         <br>
+        <div class="krakau">
         <img src="0.5 krakau.jpeg" alt="selfie">
+        </div>
     </main>
     <footer>
         <p><b>Contactgegevens</b>
