--- a/treinreizen.html
+++ b/treinreizen.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinreizen</title>
+    <link rel="icon" type="image/x-icon" href="icon interrail5.svg" alt="Icoon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,42 +21,39 @@
     </header>
     <main>
         <h1>Treinreizen</h1>
-            <p>We hebben genoten van de vele mooie uitzichten zoals op de foto hieronder in Oostenrijk</p>
-        <img src="treintje.jpeg" alt="uitzicht">
-            <p>Onderweg veel spelletjes gespeeld</p>
-        <img src="treinreisje.jpeg" alt="trein">
-            <p>Vriendjes gemaakt met de kat van de mensen naast ons</p>
-        <img src="trein kat.jpeg" alt="kat">
+            <div class="row">
+                <div class="treinreizen">
+                    <p>We hebben genoten van de vele mooie uitzichten zoals op de foto hieronder, deze foto is 
+                        genomen rond de grens tussen Italië en Oostenrijk bij de Brennerpas.
+                    </p>
+                    <img src="treintje.jpeg" alt="uitzicht">
+                </div>   
+                <div class="treinreizen">
+                    <p>Ik had speelkaarten meegenomen, hiermee hebben we onderweg veel 
+                        spelletjes gespeeld. Spelletjes zoals 31-en, pesten en zweeds pesten. </p>
+                    <img src="treinreisje.jpeg" alt="trein">
+                </div>
+                <div class="treinreizen">   
+                    <p>De mensen naast ons in de trein van Berlijn naar Krakau hadden hun kat meegenomen, die heeft de
+                        hele reis daar gelegen, was heel schattig om te zien.
+                    </p>
+                    <img src="trein kat.jpeg" alt="kat">
+                </div>
+            </div>
         <br>
         <br>
-        <table>
-            <tr> 
-                <th>Complicatie</th> 
-                <th>Route</th> 
-            </tr>
-            <tr> 
-                <td>Vertraging</td> 
-                <td>Vrijwel elke stad</td> 
-            </tr>
-            <tr> 
-                <td>Trein gemist door vertraging</td> 
-                <td>Boedapest - Ljubljana</td> 
-            </tr>
-            <tr> 
-                <td>Geen zitplek</td> 
-                <td>Wenen - Boedapest</td> 
-            </tr>
-        </table>
     </main>
     <footer>
-        <p><b>Contactgegevens</b>
-            <br>
-            Email: julia.van.walderveen@hva.nl
-            <br>
-            Tel nr: 0612345678
-            <br>
-            Postadres: Wibautstraat 2 TTH
-        </p>
+        <div class="footer">
+            <p><b>Contactgegevens</b>
+                <br>
+                Email: julia.van.walderveen@hva.nl
+                <br>
+                Tel nr: 0612345678
+                <br>
+                Postadres: Wibautstraat 2 TTH
+            </p>
+        </div>
     </footer>
 </body>
 </html>
