--- a/bestemming.html
+++ b/bestemming.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mooiste bestemming</title>
+    <link rel="icon" type="image/x-icon" href="icon interrail5.svg" alt="icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,14 +23,16 @@
         <h1>Mooiste bestemming</h1>
     </main>
     <footer>
-        <p><b>Contactgegevens</b>
-            <br>
-            Email: julia.van.walderveen@hva.nl
-            <br>
-            Tel nr: 0612345678
-            <br>
-            Postadres: Wibautstraat 2 TTH
-        </p>
+        <div class="footer">
+            <p><b>Contactgegevens</b>
+                <br>
+                Email: julia.van.walderveen@hva.nl
+                <br>
+                Tel nr: 0612345678
+                <br>
+                Postadres: Wibautstraat 2 TTH
+            </p>
+        </div>
     </footer>
 </body>
 </html>
