--- a/plannen.html
+++ b/plannen.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plannen</title>
+    <link rel="icon" type="image/x-icon" href="icon interrail5.svg" alt="Icoon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,19 +20,70 @@
         </nav>
     </header>
     <main>
-    <h1>Plannen</h1>
-    <img src="planning.png" alt="planning">
-    
+        <h1>Planning</h1>
+            <p>We hebben van tevoren een planning gemaakt van de steden
+                die we gaan bezoeken en hierbij ook een overzicht van de 
+                hostels waar we in verblijven.</p>
+            <br>
+                <table id="planner">
+                <tr> 
+                    <th>Berlijn</th> 
+                    <th>Krakau</th> 
+                    <th>Praag</th>
+                    <th>Wenen</th>
+                    <th>Boedapest</th>
+                    <th>Ljubljana</th>
+                    <th>Florence</th>
+                    <th>Innsbruck</th>
+                </tr>
+                <tr> 
+                    <td>19/7 - 22/7</td>
+                    <td>22/7 - 24/7</td>
+                    <td>24/7 - 27/7</td>
+                    <td>27/7 - 29/7</td>
+                    <td>29/7 - 1/8</td>
+                    <td>1/8 - 4/8</td>
+                    <td>4/8 - 7/8</td>
+                    <td>7/8 - 8/8</td>
+                </tr>
+                <tr> 
+                    <td>Meininger Mitte</td> 
+                    <td>Greg&Tom Beer House</td> 
+                    <td>Ahoy! Hostel</td>
+                    <td>Wombats city</td>
+                    <td>Hive Hostel</td>
+                    <td>Zzz Hostel</td>
+                    <td>Plus Florence</td>
+                    <td>Montagu Hostel</td>
+                </tr>
+            </table>
+            <br>
+            <p>De planning hebben we gemaakt op de site van <a href="https://www.interrail.eu/nl/plan-your-trip">
+                InterrailEU.</a> <br>Zij hebben een eigen reisplanner die je kan gebruiken, alleen 
+                houdt deze planner geen vertragingen <br> bij dus tijdens het reizen hebben wij deze site
+                niet meer gebruikt. <br>Ook kwamen we erachter dat tussen sommige steden uberhaupt geen treinen <br>rijden
+                dus we hebben tijdens het boeken nog wel een aantal aanpassingen moeten doen <br>in onze planning. We
+                vonden het wel raar dat de interrail planner opties gaf die niet mogelijk waren.</p>
+            <p>De hostels zijn geboekt via <a href="https://www.booking.com/index.nl.html?label=gen173nr-1BCAEoggI46AdIM1gEaKkBiAEBmAEcuAEXyAEM2AEB6AEBiAIBqAIDuAK8osyrBsACAdICJDkwNzBkYjFhLWJmN2YtNDk3ZC1hNTYzLWU5MTQ4MGQ4NzQ5YdgCBeACAQ&sid=c692fcc9ea5693066d5e0ad90990bf33&keep_landing=1&sb_price_type=total&">Booking.com</a>, 
+                via <a href="https://www.dutch.hostelworld.com/">Hostelworld</a> of via de eigen websites van het hostel. </p>
+            <p>We hebben eerst alles uitgezocht en gekeken hoelang we overal wilden blijven. Uiteindelijk <br>
+                zijn we ongeveer een half jaar van tevoren begonnen met het boeken van de reis.</p>
+        <div class="flex-container">
+            <div><img src="innsbruckk.jpeg" alt="Innsbruck straat"></div>
+            <div><img src="Innsbruck2.jpg" alt="Innsbruck huisjes"></div>
+        </div>
     </main>
     <footer>
-        <p><b>Contactgegevens</b>
-            <br>
-            Email: julia.van.walderveen@hva.nl
-            <br>
-            Tel nr: 0612345678
-            <br>
-            Postadres: Wibautstraat 2 TTH
-        </p>
+        <div class="footer">
+            <p><b>Contactgegevens</b>
+                <br>
+                Email: julia.van.walderveen@hva.nl
+                <br>
+                Tel nr: 0612345678
+                <br>
+                Postadres: Wibautstraat 2 TTH
+            </p>
+        </div>
     </footer>
 </body>
 </html>
