--- a/bestemming.html
+++ b/bestemming.html
@@ -20,17 +20,29 @@
         </nav>
     </header>
     <main>
-        <h1>Mooiste bestemming</h1>
+        <h1>Mooiste bestemmingen</h1>
+            <div class="photos">
+                <h2>Wenen</h2>
+                
+                    <img src="Belvedere.jpg" alt="Belvedere Palace">
+                    <img src="Schonnbrunn.jpg" alt="Schonnbrunn Palace">
+                    <img src="Vienna.jpg" alt="Wenen">
+                    <img src="Hofburg.jpg" alt="Hofburg Wenen">
+            </div>
+            <div class="photos">
+                <h2>Bled</h2>
+                    <img src="Gorge.jpg" alt="Vintgae Gorge">
+                    <img src="Bled 2.jpg" alt="Bled meer">
+                    <img src="Bled zwaan.jpg" alt="zwaar Bled">
+                    <img src="Vintgar.jpg" alt="Vintgar Gorge">
+            </div>
     </main>
     <footer>
         <div class="footer">
-            <p><b>Contactgegevens</b>
-                <br>
-                Email: julia.van.walderveen@hva.nl
-                <br>
-                Tel nr: 0612345678
-                <br>
-                Postadres: Wibautstraat 2 TTH
+            <p><b>Contactgegevens</b></p>
+                <p>Email: julia.van.walderveen@hva.nl</p>
+                <p>Tel nr: 0612345678</p>
+                <p>Postadres: Wibautstraat 2 TTH</p>
             </p>
         </div>
     </footer>
