--- a/treinreizen.html
+++ b/treinreizen.html
@@ -45,13 +45,10 @@
     </main>
     <footer>
         <div class="footer">
-            <p><b>Contactgegevens</b>
-                <br>
-                Email: julia.van.walderveen@hva.nl
-                <br>
-                Tel nr: 0612345678
-                <br>
-                Postadres: Wibautstraat 2 TTH
+            <p><b>Contactgegevens</b></p>
+                <p>Email: julia.van.walderveen@hva.nl</p>
+                <p>Tel nr: 0612345678</p>
+                <p>Postadres: Wibautstraat 2 TTH</p>
             </p>
         </div>
     </footer>
