--- a/bestemming.html
+++ b/bestemming.html
@@ -21,9 +21,9 @@
     </header>
     <main>
         <h1>Mooiste bestemmingen</h1>
+            <p>De mooiste bestemmingen vond ik Wenen, Oostenrijk en Bled, Slovenië.</p>
             <div class="photos">
                 <h2>Wenen</h2>
-                
                     <img src="Belvedere.jpg" alt="Belvedere Palace">
                     <img src="Schonnbrunn.jpg" alt="Schonnbrunn Palace">
                     <img src="Vienna.jpg" alt="Wenen">
@@ -31,7 +31,7 @@
             </div>
             <div class="photos">
                 <h2>Bled</h2>
-                    <img src="Gorge.jpg" alt="Vintgae Gorge">
+                    <img src="Gorge.jpg" alt="Vintgar Gorge">
                     <img src="Bled 2.jpg" alt="Bled meer">
                     <img src="Bled zwaan.jpg" alt="zwaar Bled">
                     <img src="Vintgar.jpg" alt="Vintgar Gorge">
