--- a/index.html
+++ b/index.html
@@ -20,23 +20,25 @@
         </nav>
     </header>
     <main>
-        <h1>Met de trein door Europa</h1>
-        <p>Ik ben dit jaar met een goede vriendin gaan interrailen door Midden-Europa,
-            hierbij een korte overview van de steden waar ik geweest ben: </p>
-        <ul>
-            <li>Berlijn</li> 
-            <li>Krakau</li>
-            <li>Praag</li>
-            <li>Wenen</li>
-            <li>Boedapest</li>
-            <li>Ljubljana</li>
-            <li>Florence</li>
-            <li>Innsbruck</li>
-        </ul>
+        <div class="mainn">
+            <h1>Met de trein door Europa</h1>
+            <p>Ik ben dit jaar met een goede vriendin gaan interrailen door Midden-Europa,
+                hierbij een korte overview van de steden waar ik geweest ben: </p>
+            <ul>
+                <li>Berlijn</li> 
+                <li>Krakau</li>
+                <li>Praag</li>
+                <li>Wenen</li>
+                <li>Boedapest</li>
+                <li>Ljubljana</li>
+                <li>Florence</li>
+                <li>Innsbruck</li>
+            </ul>
+        </div>
         <p>We hadden het er al een paar jaar over dat we dit wilden gaan doen en dit jaar hebben we het
             eindelijk echt doorgepakt en zijn we er voor gaan sparen. We hebben 8 plekken bezocht, in 7 landen. 
             Tijdens de reis zijn we een aantal bekenden tegengekomen 
-            en hebben we ook veel nieuwe mensen ontmoet.
+            en hebben we ook veel nieuwe mensen ontmoet omdat we in hostels verbleven.
             <p></p>
         <br>
         <div class="krakau">
