--- a/treinreizen.html
+++ b/treinreizen.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h1>Treinreizen</h1>
-            <div class="row">
+            <section class="row">
                 <div class="treinreizen">
                     <p>We hebben genoten van de vele mooie uitzichten zoals op de foto hieronder, deze foto is 
                         genomen rond de grens tussen Italië en Oostenrijk bij de Brennerpas.
@@ -39,7 +39,7 @@
                     </p>
                     <img src="trein kat.jpeg" alt="kat">
                 </div>
-            </div>
+            </section>
         <br>
         <br>
     </main>
