--- a/plannen.html
+++ b/plannen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plannen</title>
-    <link rel="icon" type="image/x-icon" href="icon interrail5.svg" alt="Icoon">
+    <link rel="icon" type="image/x-icon" href="icon_interrail5.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,8 +23,7 @@
             <p>We hebben van tevoren een planning gemaakt van de steden
                 die we gaan bezoeken en hierbij ook een overzicht van de 
                 hostels waar we in verblijven.</p>
-            <br>
-                <table id="planner">
+            <table id="planner">
                 <tr> 
                     <th>Berlijn</th> 
                     <th>Krakau</th> 
@@ -56,7 +55,6 @@
                     <td>Montagu Hostel</td>
                 </tr>
             </table>
-            <br>
             <p>De planning hebben we gemaakt op de site van <a href="https://www.interrail.eu/nl/plan-your-trip">
                 InterrailEU.</a> <br>Zij hebben een eigen reisplanner die je kan gebruiken, alleen 
                 houdt deze planner geen vertragingen <br> bij dus tijdens het reizen hebben wij deze site
@@ -75,10 +73,9 @@
     <footer>
         <div class="footer">
             <p><b>Contactgegevens</b></p>
-                <p>Email: julia.van.walderveen@hva.nl</p>
-                <p>Tel nr: 0612345678</p>
-                <p>Postadres: Wibautstraat 2 TTH</p>
-            </p>
+            <p>Email: julia.van.walderveen@hva.nl</p>
+            <p>Tel nr: 0612345678</p>
+            <p>Postadres: Wibautstraat 2 TTH</p>
         </div>
     </footer>
 </body>
