--- a/treinreizen.html
+++ b/treinreizen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinreizen</title>
-    <link rel="icon" type="image/x-icon" href="icon interrail5.svg" alt="Icoon">
+    <link rel="icon" type="image/x-icon" href="icon_interrail5.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -36,19 +36,16 @@
                     <p>De mensen naast ons in de trein van Berlijn naar Krakau hadden hun kat meegenomen, die heeft de
                         hele reis daar gelegen, was heel schattig om te zien.
                     </p>
-                    <img src="trein kat.jpeg" alt="kat">
+                    <img src="trein_kat.jpeg" alt="kat">
                 </div>
-            </section>
-        <br>
-        <br>
+            </section>   
     </main>
     <footer>
         <div class="footer">
             <p><b>Contactgegevens</b></p>
-                <p>Email: julia.van.walderveen@hva.nl</p>
-                <p>Tel nr: 0612345678</p>
-                <p>Postadres: Wibautstraat 2 TTH</p>
-            </p>
+            <p>Email: julia.van.walderveen@hva.nl</p>
+            <p>Tel nr: 0612345678</p>
+            <p>Postadres: Wibautstraat 2 TTH</p>
         </div>
     </footer>
 </body>
