--- a/bestemming.html
+++ b/bestemming.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mooiste bestemming</title>
-    <link rel="icon" type="image/x-icon" href="icon interrail5.svg" alt="icon">
+    <link rel="icon" type="image/x-icon" href="icon_interrail5.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,18 +31,17 @@
             <div class="photos">
                 <h2>Bled</h2>
                     <img src="Gorge.jpg" alt="Vintgar Gorge">
-                    <img src="Bled 2.jpg" alt="Bled meer">
-                    <img src="Bled zwaan.jpg" alt="zwaar Bled">
+                    <img src="Bled2.jpg" alt="Bled meer">
+                    <img src="Bled_zwaan.jpg" alt="zwaar Bled">
                     <img src="Vintgar.jpg" alt="Vintgar Gorge">
             </div>
     </main>
     <footer>
         <div class="footer">
             <p><b>Contactgegevens</b></p>
-                <p>Email: julia.van.walderveen@hva.nl</p>
-                <p>Tel nr: 0612345678</p>
-                <p>Postadres: Wibautstraat 2 TTH</p>
-            </p>
+            <p>Email: julia.van.walderveen@hva.nl</p>
+            <p>Tel nr: 0612345678</p>
+            <p>Postadres: Wibautstraat 2 TTH</p>
         </div>
     </footer>
 </body>
