--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interrail</title>
-    <link rel="icon" type="image/x-icon" href="icon interrail5.svg" alt="Icoon">
+    <link rel="icon" type="image/x-icon" href="icon_interrail5.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -38,19 +38,17 @@
             eindelijk echt doorgepakt en zijn we er voor gaan sparen. We hebben 8 plekken bezocht, in 7 landen. 
             Tijdens de reis zijn we een aantal bekenden tegengekomen 
             en hebben we ook veel nieuwe mensen ontmoet omdat we in hostels verbleven.
-            <p></p>
-        <br>
+            </p>
         <div class="krakau">
-        <img src="0.5 krakau.jpeg" alt="selfie">
+        <img src="0.5krakau.jpeg" alt="selfie">
         </div>
     </main>
     <footer>
         <div class="footer">
             <p><b>Contactgegevens</b></p>
-                <p>Email: julia.van.walderveen@hva.nl</p>
-                <p>Tel nr: 0612345678</p>
-                <p>Postadres: Wibautstraat 2 TTH</p>
-            </p>
+            <p>Email: julia.van.walderveen@hva.nl</p>
+            <p>Tel nr: 0612345678</p>
+            <p>Postadres: Wibautstraat 2 TTH</p>
         </div>
     </footer>
 </body>
